Fix footer styles on mobile.

--- a/src/components/AppFooter/index.less
+++ b/src/components/AppFooter/index.less
@@ -16,6 +16,7 @@
   background-repeat: no-repeat;
   background-position: calc(100% - 12px);
   padding-right: 104px;
+  min-width: 240px;
 
   @media (min-width: 700px) {
     padding-right: 13px;
